# stash_file_protocol

./: .gitignore  mise.toml  pyproject.toml  requirements.txt  stash-file-protocol.spec  stash_file_protocol.py  stash_file_protocol.reg  stash_file_protocol_registry.py
.agents/references/chrome-extension-boilerplate/: README.md  background.js  content.js  manifest.json
.agents/references/chrome-extensions/2026-04-01/: README.md  REFERENCE_INDEX.md  RESEARCH_SUMMARY.md  SOURCE_URLS.md
.agents/references/semantic-versioning/2026-04-01/: README.md  REFERENCE_INDEX.md  RESEARCH_SUMMARY.md  SOURCE_URLS.md
.agents/references/windows-uri-scheme-protocol-handlers/2026-04-01/: README.md  REFERENCE_INDEX.md  RESEARCH_SUMMARY.md  SOURCE_URLS.md
references/stashapp-graphql-api/: SKILL.md
references/stashapp-graphql-api/auth-request/: sources.txt
references/stashapp-graphql-api/auth-request/docs.stashapp.cc/: Configuration - Stash-Docs.md
references/stashapp-graphql-api/client-libraries/: sources.txt
references/stashapp-graphql-api/client-libraries/docs.stashapp.cc/: Embedded plugins - Stash-Docs.md  (+1 more)
references/stashapp-graphql-api/overview/: sources.txt
references/stashapp-graphql-api/queries-mutations/: sources.txt
references/stashapp-graphql-api/releases-urls/: stashapp-stash-urls.txt
references/stashapp-graphql-api/schema-types/: sources.txt
references/winregistry/: AUTHORATATIVE_URLS.md  USAGE.md  github.com-shpaker-winregistry-.xml
scripts/: Invoke-Build.ps1
stash_file_protocol/: __init__.py  __main__.py  stash_file_protocol.py
(+56 files in other folders)
