[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "stash-file-protocol"
version = "0.1.0"
description = "Resolve stash:// media URIs to local file paths"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "stashapi",
    "stashapp-tools>=0.2.59",
    "tqdm>=4.67.3",
    "winregistry>=2.1.4",
]

[project.scripts]
stash-file-protocol = "stash_file_protocol:main"
